--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ body {
   padding: 0;
   width: 100%;
   text-align: center;
-  font-size: 2em;
+  font-size: 1.5em; /* Уменьшенный размер шрифта */
   font-family: 'Lobster', serif;
   color: #ff00ff;
   text-transform: uppercase;
@@ -128,19 +128,19 @@ body {
   animation: animate 0.25s ease-in-out forwards;
 }
 
-.hero-title span:nth-child(1) { --n: 1; animation-delay: calc(1.5s + 0.2s * (var(--n) - 1)); }
-.hero-title span:nth-child(2) { --n: 2; animation-delay: calc(1.5s + 0.2s * (var(--n) - 1)); }
-.hero-title span:nth-child(3) { --n: 3; animation-delay: calc(1.5s + 0.2s * (var(--n) - 1)); }
-.hero-title span:nth-child(4) { --n: 4; animation-delay: calc(1.5s + 0.2s * (var(--n) - 1)); }
-.hero-title span:nth-child(5) { --n: 5; animation-delay: calc(1.5s + 0.2s * (var(--n) - 1)); }
-.hero-title span:nth-child(6) { --n: 6; animation-delay: calc(1.5s + 0.2s * (var(--n) - 1)); }
-.hero-title span:nth-child(7) { --n: 7; animation-delay: calc(1.5s + 0.2s * (var(--n) - 1)); }
-.hero-title span:nth-child(8) { --n: 8; animation-delay: calc(1.5s + 0.2s * (var(--n) - 1)); }
-.hero-title span:nth-child(9) { --n: 9; animation-delay: calc(1.5s + 0.2s * (var(--n) - 1)); }
-.hero-title span:nth-child(10) { --n: 10; animation-delay: calc(1.5s + 0.2s * (var(--n) - 1)); }
-.hero-title span:nth-child(11) { --n: 11; animation-delay: calc(1.5s + 0.2s * (var(--n) - 1)); }
-.hero-title span:nth-child(12) { --n: 12; animation-delay: calc(1.5s + 0.2s * (var(--n) - 1)); }
-.hero-title span:nth-child(13) { --n: 13; animation-delay: calc(1.5s + 0.2s * (var(--n) - 1)); }
+.hero-title span:nth-child(1) { --n: 1; animation-delay: calc(0.5s + 0.14s * (var(--n) - 1)); }
+.hero-title span:nth-child(2) { --n: 2; animation-delay: calc(0.5s + 0.14s * (var(--n) - 1)); }
+.hero-title span:nth-child(3) { --n: 3; animation-delay: calc(0.5s + 0.14s * (var(--n) - 1)); }
+.hero-title span:nth-child(4) { --n: 4; animation-delay: calc(0.5s + 0.14s * (var(--n) - 1)); }
+.hero-title span:nth-child(5) { --n: 5; animation-delay: calc(0.5s + 0.14s * (var(--n) - 1)); }
+.hero-title span:nth-child(6) { --n: 6; animation-delay: calc(0.5s + 0.14s * (var(--n) - 1)); }
+.hero-title span:nth-child(7) { --n: 7; animation-delay: calc(0.5s + 0.14s * (var(--n) - 1)); }
+.hero-title span:nth-child(8) { --n: 8; animation-delay: calc(0.5s + 0.14s * (var(--n) - 1)); }
+.hero-title span:nth-child(9) { --n: 9; animation-delay: calc(0.5s + 0.14s * (var(--n) - 1)); }
+.hero-title span:nth-child(10) { --n: 10; animation-delay: calc(0.5s + 0.14s * (var(--n) - 1)); }
+.hero-title span:nth-child(11) { --n: 11; animation-delay: calc(0.5s + 0.14s * (var(--n) - 1)); }
+.hero-title span:nth-child(12) { --n: 12; animation-delay: calc(0.5s + 0.14s * (var(--n) - 1)); }
+.hero-title span:nth-child(13) { --n: 13; animation-delay: calc(0.5s + 0.14s * (var(--n) - 1)); }
 
 @keyframes animate {
   0% { opacity: 0; transform: rotateY(90deg) scale(0.8); }
